--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <!-- About Me Section -->
     <div class="content" id="about">
         <h2>About Me</h2>
-        <p>Hello! I am a passionate data scientist and developer who loves creating projects and exploring new technologies.</p>
+        <p>Hello! I am a passionate data analyst who is working on getting into data science and  loves creating projects and exploring new technologies.</p>
         <img src="fvfv.jpg" alt="My Profile Picture">
     </div>
 
