--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -85,31 +86,27 @@
         <a href="#about">About Me</a>
         <a href="#projects">Projects</a>
         <a href="#portfolio">Portfolio</a>
-        <a href="https://github.com/Ms_Shadya" target="_blank">GitHub</a>
+        <a href="https://github.com/your-username" target="_blank">GitHub</a>
         <a href="#contact">Contact</a>
     </nav>
 
     <!-- About Me Section -->
     <div class="content" id="about">
         <h2>About Me</h2>
-        <p>Hello! I am a passionate data analyst who is working on getting into data science and  loves creating projects and exploring new technologies.</p>
-        <img src="fvfv.jpg" alt="My Profile Picture">
+        <p>Hello! I am a passionate data scientist and developer who loves creating projects and exploring new technologies.</p>
+        <img src="your-profile-picture.jpg" alt="My Profile Picture">
     </div>
 
     <!-- Projects Section -->
     <div class="content" id="projects">
         <h2>Projects</h2>
         <p>Check out some of my recent work:</p>
-        <a href="https://github.com/chuqudee/Water-quality-and-infrastructure-analysis" target="_blank">
-            <img src="fvfv.jpg" alt="Water quality">
+        <a href="https://github.com/your-username/project1" target="_blank">
+            <img src="project1-image.jpg" alt="Project 1">
         </a>
         <a href="https://github.com/your-username/project2" target="_blank">
             <img src="project2-image.jpg" alt="Project 2">
         </a>
-	<a href="https://github.com/your-username/project2" target="_blank">
-            <img src="project2-image.jpg" alt="Project 3">
-        </a>
-	</a>
 	<a href="https://github.com/your-username/project2" target="_blank">
             <img src="project2-image.jpg" alt="Project 3">
         </a>
@@ -124,7 +121,7 @@
 
     <!-- Footer Section -->
     <footer id="contact">
-        <p>Contact me: <a href="mailto:naigagas13@gmail.com">your-email@example.com</a></p>
+        <p>Contact me: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
     </footer>
 
 </body>
